hphp/test/zend/good/tests/lang/bug23584.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: foo' in %s/lang/bug23584.php:6
Stack trace:
%A
